# wf-backend

./: .env.example  docker-compose.yml  inital-db.sql  main.py  pyproject.toml  vercel.json
src/core/: config.py
src/leads/: __init__.py  router.py  schemas.py  service.py
src/noname/: message_builder.py  schema.py  service.py
