[project]
name = "proptech-booking-saas"
version = "0.1.0"
description = "Backend for PropTech Booking SaaS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "pydantic-settings>=2.5.0",
    "aiobotocore>=2.15.0",
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
